hi dad i fixed ur scrollbars

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ footer {
     background: #242424;
     padding: 20px;
     column-gap: 20px;
-    width: 100vw;
+    width: calc(100% + 40px + 40px);
 }
 
 .photo-grid img {
